added a little bit of styles

--- a/DynamicConvexHullD3JSVisualization/Index.html
+++ b/DynamicConvexHullD3JSVisualization/Index.html
@@ -16,28 +16,29 @@
 
 <body>
 
-    <div class="body">
+    <div class="content">
         <header>
 
         </header>
 
         <div class="main">
 
-
-            <canvas id="canvas" width="500" height="500"></canvas>
-
+            <!--<canvas id="canvas" width="500" height="500" style="border:1px solid"></canvas>-->
 
             <div class="control-panel">
 
-            </div>
-            <div class="treap-visualization">
 
             </div>
-            <div class="red-black-tree-visualization">
+            <div class="convex-hull-visualization-part">
                     
             </div>
-            <div class="convex-hull-visualization">
+            <div class="trees-part">
+                <div class="treap-visualization-part">
 
+                </div>
+                <div class="red-black-tree-visualization-part">
+                        
+                </div>
             </div>
         </div>
 
