--- a/DynamicConvexHullD3JSVisualization/Index.html
+++ b/DynamicConvexHullD3JSVisualization/Index.html
@@ -21,10 +21,11 @@
 
         </header>
 
+        <canvas id="canvas" width="1000" height="1000" style="border:1px solid"></canvas>
+
         <div class="main">
 
-            <!--<canvas id="canvas" width="500" height="500" style="border:1px solid"></canvas>-->
-
+            <!--
             <div class="control-panel">
 
 
@@ -40,6 +41,7 @@
                         
                 </div>
             </div>
+            -->
         </div>
 
         <footer>
