--- a/DynamicConvexHullD3JSVisualization/Index.html
+++ b/DynamicConvexHullD3JSVisualization/Index.html
@@ -21,7 +21,16 @@
 
         </header>
 
-        <canvas id="canvas" width="1000" height="1000" style="border:1px solid"></canvas>
+        <canvas id="canvas" width="500" height="500" style="border:1px solid"></canvas>
+        <br>
+        <button id="random-delete">Delete rundom</button>
+        <button id="random-add">Add rundom</button>
+        <br><br>
+        <button id="tricky1">Tricky 1</button>
+        <button id="tricky2">Tricky 2</button>
+        <button id="tricky3">Tricky 3</button>
+        <button id="tricky4">Tricky 4</button>
+        <button id="tricky5">Tricky 5</button>
 
         <div class="main">
 
